# pynq-z1-bsp

./: Cargo.toml  Justfile  LICENSE-APACHE  README.md  build.rs  linker_script.ld
.cargo/: config.toml
.github/workflows/: rust.yml
examples/: gpio.rs  hello.rs  uart_interaction.rs
scripts/: hexadecimal_array_generator.py  list-examples.py  run.gdb  run_on_board.tcl
src/: common.rs  cpuid.rs  interrupt.rs  lib.rs  peripheral.rs  runtime.S  scc.rs
src/common/: bitman.rs  instruction.rs  memman.rs  timing.rs
src/interrupt/: gic.rs  handler.rs  icc.rs  irq_numbers.rs
src/interrupt/handler/: irq.rs
src/peripheral/: axi.rs  dma.rs  gpio.rs  led.rs  slcr.rs  timers.rs  uart.rs
src/peripheral/dma/: channel.rs  manager.rs
src/peripheral/led/: rgb.rs
src/peripheral/timers/: timer_global.rs  timer_private.rs  timer_ttc.rs  timer_watchdog.rs
src/peripheral/timers/timer_watchdog/: private_watchdog_timer.rs
